# SimCity

./: .gitattributes  CMakeLists.txt  README.md  SimCity  exit  main  main.cpp
.github/actions/clang-tidy/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/create-release/: action.yml
.github/actions/install-packages/: action.yml
.github/actions/runtime-checks/: action.yml
.github/config/: rebase-branches.json  renovate-ci.json  renovate-deps.json  renovate-os.json
.github/workflows/: clear-artifacts.yml  clear-cache.yml  cmake.yml  rebase-branches.yml  renovate-ci.yml  renovate-deps.yml  renovate-os.yml
Headers/: Apartament.h  Bloc.h  Casa.h  ChallangeManager.h  CladireAdministrativa.h  CladireBuilder.h  CladireEconomie.h  CladireEducatie.h  CladireFactory.h  CladirePublica.h  CladireRezidentiala.h  CladireServicii.h  Clamp.h  ExceptieOras.h  Fabrica.h  Oras.h  Proiect.h  SpatiuComercial.h  SpatiuVerde.h  Strada.h  Structuri.h  TrackerProgres.h  Zona.h
Source/: Apartament.cpp  Bloc.cpp  Casa.cpp  CladireAdministrativa.cpp  CladireBuilder.cpp  CladireEconomie.cpp  CladireEducatie.cpp  CladireFactory.cpp  CladirePublica.cpp  CladireRezidentiala.cpp  CladireServicii.cpp  Fabrica.cpp  Oras.cpp  Proiect.cpp  SpatiuComercial.cpp  SpatiuVerde.cpp  Strada.cpp  Structuri.cpp  Zona.cpp
UI/: Button.cpp  Button.h  Form.cpp  Form.h  GameSession.cpp  GameSession.h  SideMenu.cpp  SideMenu.h  UI.cpp  UI.h
UI/Pages/: EditPage.cpp  EditPage.h  MainMenuPage.cpp  MainMenuPage.h  ProjectPage.cpp  ProjectPage.h
scripts/: build_cppcheck.sh  run_valgrind.sh
src/ui/: App.cpp  App.h  Button.cpp  Button.h  TextInput.cpp  TextInput.h
